--- a/project.config.json
+++ b/project.config.json
@@ -70,6 +70,20 @@
 					"id": -1,
 					"name": "pages/registered/registered",
 					"pathName": "pages/registered/registered",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/navigation/navigation",
+					"pathName": "pages/navigation/navigation",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/tosignup/tosignup",
+					"pathName": "pages/tosignup/tosignup",
 					"scene": null
 				}
 			]
