--- a/project.config.json
+++ b/project.config.json
@@ -84,6 +84,13 @@
 					"id": -1,
 					"name": "pages/tosignup/tosignup",
 					"pathName": "pages/tosignup/tosignup",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/theReservationList/theReservationList",
+					"pathName": "pages/theReservationList/theReservationList",
 					"scene": null
 				}
 			]
