--- a/project.config.json
+++ b/project.config.json
@@ -91,6 +91,20 @@
 					"id": -1,
 					"name": "pages/theReservationList/theReservationList",
 					"pathName": "pages/theReservationList/theReservationList",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/navigation/navigation",
+					"pathName": "pages/navigation/navigation",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/setting/setting",
+					"pathName": "pages/setting/setting",
 					"scene": null
 				}
 			]
